quartz job refactored...